--- a/Task-2.html
+++ b/Task-2.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Task 2</title>
-    <link rel="stylesheet" href="Css/task-2.css"/>
+    <link rel="stylesheet" href="css/task-2.css"/>
 </head>
 <body>
     <div id="navbar">
         <div id="logo-container">
-            <img src="Images/logo1.jpg" alt=" logo" />
+            <img src="images/logo1.jpg" alt=" logo" />
             <h2>Betasquirrel</h2>
         </div>
         <div id="menu-container">
