--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <h1>BETASQUIRREL TASKS</h1>
       </div>
       <div id="bottom">
-        <div class="box one">
-          <h3>TASK-1</h3>
+        <div class="box">
+          <a href="task-1/index.html">TASK-1</a>
         </div>
-        <div class="box two">
-          <h3>TASK-2</h3>
+        <div class="box">
+          <a href="task-2/index.html">TASK-2</a>
         </div>
-        <div class="box three">
-          <h3>TASK-4</h3>
+        <div class="box">
+          <a href="task-4/index.html">TASK-4</a>
         </div>
       </div>
     </div>
