--- a/task-1/index.html
+++ b/task-1/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="navbar">
       <div class="left">
-        <img src="images/logo1.jpg" alt="logo" />
+        <img src="images/logo1.png" alt="logo" />
         <h2>Betasquirrel</h2>
       </div>
       <div class="right">
