--- a/task-2/index.html
+++ b/task-2/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="navbar">
       <div id="logo-container">
-        <img src="images/logo1.jpg" alt=" logo" />
+        <img src="images/logo1.png" alt=" logo" />
         <h2>Betasquirrel</h2>
       </div>
       <div id="menu-container">
