--- a/task-1/index.html
+++ b/task-1/index.html
@@ -21,47 +21,50 @@
         </nav>
       </div>
     </div>
-    <div id="main-container">
-      <h1>Lorem ipsum dolor sit amet consectetur</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-        molestiae nisi et repellat ex eligendi maxime ipsa aut! Fugit quasi sunt
-        inventore perspiciatis? Cumque qui nulla, voluptate quam deleniti est?
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sequi
-        perferendis debitis culpa amet doloremque odit minus cumque accusantium
-        voluptatem, quibusdam ea suscipit illum minima veritatis distinctio
-        commodi ratione ipsa.
-      </p>
-    </div>
-    <div id="sub-container">
-      <div class="boxes m-r">
-        <h2>Lorem ipsum dolor</h2>
+    <div id="main">
+      <div id="main-container">
+        <h1>Lorem ipsum dolor sit amet consectetur</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
-          veritatis praesentium quo repellat facilis, tempora vel quae beatae
-          vitae, enim excepturi illo, nisi eum. Rerum officia esse ad voluptatum
-          doloribus.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+          molestiae nisi et repellat ex eligendi maxime ipsa aut! Fugit quasi
+          sunt inventore perspiciatis? Cumque qui nulla, voluptate quam deleniti
+          est?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sequi
+          perferendis debitis culpa amet doloremque odit minus cumque
+          accusantium voluptatem, quibusdam ea suscipit illum minima veritatis
+          distinctio commodi ratione ipsa.
         </p>
       </div>
-      <div class="boxes m-r">
-        <h2>Lorem ipsum dolor</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-          reiciendis, numquam repudiandae maxime aliquam ipsa repellat, cumque
-          doloribus consequuntur quam blanditiis odio, atque odit cum debitis
-          eos non quae dolorum?
-        </p>
-      </div>
-      <div class="boxes">
-        <h2>Lorem ipsum dolor</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-          repudiandae, libero distinctio obcaecati architecto laborum quibusdam,
-          eos nostrum temporibus, provident animi porro! Aut suscipit at nemo
-          dolor illo excepturi! Quae?
-        </p>
+      <div id="sub-container">
+        <div class="boxes m-r">
+          <h2>Lorem ipsum dolor</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+            veritatis praesentium quo repellat facilis, tempora vel quae beatae
+            vitae, enim excepturi illo, nisi eum. Rerum officia esse ad
+            voluptatum doloribus.
+          </p>
+        </div>
+        <div class="boxes m-r">
+          <h2>Lorem ipsum dolor</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+            reiciendis, numquam repudiandae maxime aliquam ipsa repellat, cumque
+            doloribus consequuntur quam blanditiis odio, atque odit cum debitis
+            eos non quae dolorum?
+          </p>
+        </div>
+        <div class="boxes">
+          <h2>Lorem ipsum dolor</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+            repudiandae, libero distinctio obcaecati architecto laborum
+            quibusdam, eos nostrum temporibus, provident animi porro! Aut
+            suscipit at nemo dolor illo excepturi! Quae?
+          </p>
+        </div>
       </div>
     </div>
   </body>
