--- a/task-1/index.html
+++ b/task-1/index.html
@@ -27,14 +27,12 @@
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
           molestiae nisi et repellat ex eligendi maxime ipsa aut! Fugit quasi
-          sunt inventore perspiciatis? Cumque qui nulla, voluptate quam deleniti
-          est?
+          sunt inventore perspiciatis? Cumque qui
         </p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sequi
           perferendis debitis culpa amet doloremque odit minus cumque
-          accusantium voluptatem, quibusdam ea suscipit illum minima veritatis
-          distinctio commodi ratione ipsa.
+          accusantium voluptatem
         </p>
       </div>
       <div id="sub-container">
