--- a/task-2/index.html
+++ b/task-2/index.html
@@ -27,8 +27,7 @@
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto magni
           dolorum porro facilis assumenda quos optio vitae ex eaque, laudantium
-          veritatis mollitia? Dolor corporis aliquid expedita adipisci, alias
-          aut cum!
+          veritatis mollitia? Dolor corporis aliquid
         </p>
       </div>
       <div class="box two">
@@ -36,8 +35,7 @@
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
           fugit, obcaecati earum itaque voluptatibus doloribus officia
-          repudiandae soluta molestias maiores animi praesentium aperiam
-          reprehenderit sunt laboriosam iusto nemo, consequuntur
+          repudiandae soluta molestias maiores animi
         </p>
       </div>
     </div>
