--- a/task-1/index.html
+++ b/task-1/index.html
@@ -36,7 +36,7 @@
         </p>
       </div>
       <div id="sub-container">
-        <div class="boxes m-r">
+        <div class="boxes m-r first">
           <h2>Lorem ipsum dolor</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
@@ -45,7 +45,7 @@
             voluptatum doloribus.
           </p>
         </div>
-        <div class="boxes m-r">
+        <div class="boxes m-r second">
           <h2>Lorem ipsum dolor</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
@@ -54,7 +54,7 @@
             eos non quae dolorum?
           </p>
         </div>
-        <div class="boxes">
+        <div class="boxes third">
           <h2>Lorem ipsum dolor</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
