--- a/task-5/index.html
+++ b/task-5/index.html
@@ -33,7 +33,7 @@
             </nav>
           </div>
           <div class="right">
-              <form action="admission.html">
+              <form action="form.html">
                 <input type="submit" value="Add Student">
               </form>
           </div>
