--- a/task-5/form.html
+++ b/task-5/form.html
@@ -31,36 +31,36 @@
           <div class="main-form">
             <div class="first-formside">
               <form>
-                <div class="form-1 name">
+                <div class="student-1 name">
                   <label for="firstname"
                     >First Name <span class="red-text">*</span> :</label
                   >
                 </div>
-                <div class="form-1 namefield">
+                <div class="student-1 namearea">
                   <input
                     type="text"
                     placeholder="Enter your first name"
                     id="first name"
                   />
                 </div>
-                <div class="form-1 mobile">
+                <div class="student-1 mobile">
                   <label for="mobile number"
                     >Mobile <span class="red-text">*</span> :</label
                   >
                 </div>
-                <div class="form-1 mobilefield">
+                <div class="student-1 mobilearea">
                   <input
                     type="tel"
                     placeholder="Enter your mobile number"
                     id="mobile number"
                   />
                 </div>
-                <div class="form-1 branch">
+                <div class="student-1 branch">
                   <label for="branch"
                     >Branch <span class="red-text">*</span> :</label
                   >
                 </div>
-                <div class="form-1 branchfield">
+                <div class="student-1 brancharea">
                   <select
                     name="branch"
                     id="branch"
@@ -80,34 +80,34 @@
             </div>
             <div class="second-formside">
               <form>
-                <div class="form-2 lastname">
+                <div class="student-2 lastname">
                   <label for="lastname"
                     >Last Name <span class="red-text">*</span> :</label
                   >
                 </div>
-                <div class="form-2 lastnamefield">
+                <div class="student-2 lastnamearea">
                   <input
                     type="text"
                     placeholder="Enter your last name"
                     id="lastname"
                   />
                 </div>
-                <div class="form-2 email">
+                <div class="student-2 email">
                   <label for="email"
                     >Email <span class="red-text">*</span> :</label
                   >
                 </div>
-                <div class="emailfield">
+                <div class="emailarea">
                   <input
                     type="email"
                     placeholder="Enter your email"
                     id="email"
                   />
                 </div>
-                <div class="form-2 radio">
+                <div class="student-2 radio">
                   <label for="radio">Do You Need Hostel Facility :</label>
                 </div>
-                <div class="form-2 radiofield">
+                <div class="student-2 radioarea">
                   <input type="radio" id="hostel" name="hostel" value="yes" />
                   <label for="yes">Yes</label>
                   <input type="radio" id="hostel" name="hostel" value="no" />
@@ -166,7 +166,7 @@
                       >Permanent Address<span class="red-text">*</span> :</label
                     >
                   </div>
-                  <div class="addressfield">
+                  <div class="addressarea">
                     <textarea
                       type="text"
                       placeholder="Enter your full address"
