--- a/task-5/index.html
+++ b/task-5/index.html
@@ -17,29 +17,26 @@
         <img src="images/person.webp" alt="person" />
       </div>
     </div>
-    <div class="main">
+    <div class="main-container">
       <div id="sidebar">
         <nav>
-          <a href="#">STUDENTS</a>
-          <a href="#">STAFF</a>
-          <a href="#">EXAMS</a>
-        </nav>
+          <ul>
+            <li><h4>STUDENT</h4></li>
+            <li><h4>STAFF</h4></li>
+            <li><h4>EXAMS</h4></li>
+          </ul>
       </div>
       <div id="container">
-        <div class="first">
-          <div class="left">
-            <nav>
-              <a href="#">STUDENTS</a>
-            </nav>
+        <div class="second-navbar">
+          <div class="navbar2-left">
+            <h4>STUDENT</h4>
           </div>
-          <div class="right">
-              <form action="form.html">
-                <input type="submit" value="Add Student">
-              </form>
+          <div class="navbar2-right">
+              <a href="form.html">Add Student</a>
           </div>
           </div>
-          <div class="second">
-            <table class="center">
+          <div class="main-table">
+            <table>
               <tr>
                 <th>R NO.</th>
                 <th>FULL NAME</th>
@@ -118,7 +115,6 @@
                 <td>ameen@gmail.com</td>
               </tr>
             </table>
-          </div>
         </div>
       </div>
     </div>
