--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <div class="box">
           <a href="task-4/index.html">TASK 4</a>
         </div>
+        <div class="box">
+          <a href="task-5/index.html">TASK 5</a>
+        </div>
       </div>
     </div>
   </body>
