--- a/task-5/index.html
+++ b/task-5/index.html
@@ -17,104 +17,99 @@
         <img src="images/person.webp" alt="person" />
       </div>
     </div>
-    <div class="main-container">
+    <div id="main-container">
       <div id="sidebar">
-        <nav>
-          <ul>
-            <li><h4>STUDENT</h4></li>
-            <li><h4>STAFF</h4></li>
-            <li><h4>EXAMS</h4></li>
-          </ul>
+        <ul>
+          <li><h4>STUDENT</h4></li>
+          <li><h4>STAFF</h4></li>
+          <li><h4>EXAMS</h4></li>
+        </ul>
       </div>
-      <div id="container">
-        <div class="second-navbar">
-          <div class="navbar2-left">
-            <h4>STUDENT</h4>
-          </div>
-          <div class="navbar2-right">
-              <a href="form.html">Add Student</a>
-          </div>
-          </div>
-          <div class="main-table">
-            <table>
-              <tr>
-                <th>R NO.</th>
-                <th>FULL NAME</th>
-                <th>BRANCH</th>
-                <th>MOBILE</th>
-                <th>EMAIL</th>
-              </tr>
-              <tr>
-                <td>505324</td>
-                <td>Saifunnisa</td>
-                <td>Computer Science</td>
-                <td>7592881588</td>
-                <td>saifunnisa@gmail.com</td>
-              </tr>
-              <tr>
-                <td>505325</td>
-                <td>Haseena</td>
-                <td>Electronics</td>
-                <td>9605154698</td>
-                <td>haseena@gmail.com</td>
-              </tr>
-              <tr>
-                <td>505326</td>
-                <td>Zaad Aman</td>
-                <td>Mechanical</td>
-                <td>9526000097</td>
-                <td>aman@gmail.com</td>
-              </tr>
-              <tr>
-                <td>505327</td>
-                <td>Nihad ali</td>
-                <td>computer science</td>
-                <td>8547292847</td>
-                <td>nihad@gmail.com</td>
-              </tr>
-              <tr>
-                <td>505328</td>
-                <td>Fahina</td>
-                <td>Information Technology</td>
-                <td>9961136605</td>
-                <td>fahina@gmail.com</td>
-              </tr>
-              <tr>
-                <td>505329</td>
-                <td>Fathima</td>
-                <td>Civil</td>
-                <td>9495533035</td>
-                <td>Fathima@gmail.com</td>
-              </tr>
-              <tr>
-                <td>505330</td>
-                <td>Raniya</td>
-                <td>Information Technology</td>
-                <td>9961137274</td>
-                <td>raniya@gmail.com</td>
-              </tr>
-              <tr>
-                <td>505331</td>
-                <td>Nazrin</td>
-                <td>Electronics</td>
-                <td>9897654390</td>
-                <td>nazrin@gmail.com</td>
-              </tr>
-              <tr>
-                <td>505332</td>
-                <td>Ameer</td>
-                <td>Mechanical</td>
-                <td>8547656768</td>
-                <td>ameer@gmail.com</td>
-              </tr>
-              <tr>
-                <td>505332</td>
-                <td>Ameen</td>
-                <td>Civil</td>
-                <td>8547122334</td>
-                <td>ameen@gmail.com</td>
-              </tr>
-            </table>
+      <div id="right-container">
+        <div class="right-head">
+          <span><h4 class="student">STUDENT</h4></span>
+          <a href="form.html">Add Student</a>
+        </div>
+        <div class="main-table">
+          <table>
+            <tr>
+              <th>R NO.</th>
+              <th>FULL NAME</th>
+              <th>BRANCH</th>
+              <th>MOBILE</th>
+              <th>EMAIL</th>
+            </tr>
+            <tr>
+              <td>505324</td>
+              <td>Saifunnisa</td>
+              <td>Computer Science</td>
+              <td>7592881588</td>
+              <td>saifunnisa@gmail.com</td>
+            </tr>
+            <tr>
+              <td>505325</td>
+              <td>Haseena</td>
+              <td>Electronics</td>
+              <td>9605154698</td>
+              <td>haseena@gmail.com</td>
+            </tr>
+            <tr>
+              <td>505326</td>
+              <td>Zaad Aman</td>
+              <td>Mechanical</td>
+              <td>9526000097</td>
+              <td>aman@gmail.com</td>
+            </tr>
+            <tr>
+              <td>505327</td>
+              <td>Nihad ali</td>
+              <td>computer science</td>
+              <td>8547292847</td>
+              <td>nihad@gmail.com</td>
+            </tr>
+            <tr>
+              <td>505328</td>
+              <td>Fahina</td>
+              <td>Information Technology</td>
+              <td>9961136605</td>
+              <td>fahina@gmail.com</td>
+            </tr>
+            <tr>
+              <td>505329</td>
+              <td>Fathima</td>
+              <td>Civil</td>
+              <td>9495533035</td>
+              <td>Fathima@gmail.com</td>
+            </tr>
+            <tr>
+              <td>505330</td>
+              <td>Raniya</td>
+              <td>Information Technology</td>
+              <td>9961137274</td>
+              <td>raniya@gmail.com</td>
+            </tr>
+            <tr>
+              <td>505331</td>
+              <td>Nazrin</td>
+              <td>Electronics</td>
+              <td>9897654390</td>
+              <td>nazrin@gmail.com</td>
+            </tr>
+            <tr>
+              <td>505332</td>
+              <td>Ameer</td>
+              <td>Mechanical</td>
+              <td>8547656768</td>
+              <td>ameer@gmail.com</td>
+            </tr>
+            <tr>
+              <td>505332</td>
+              <td>Ameen</td>
+              <td>Civil</td>
+              <td>8547122334</td>
+              <td>ameen@gmail.com</td>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
