--- a/task-5/form.html
+++ b/task-5/form.html
@@ -170,15 +170,15 @@
                     <textarea
                       type="text"
                       placeholder="Enter your full address"
-                      cols="70"
+                      cols="60"
                       rows="10"
                     ></textarea>
                   </div>
                 </div>
               </form>
               <div class="button">
-                <button class="clear" type="button">CLEAR</button>
-                <button class="submit" type="button">SUBMIT</button>
+                <button class="clear" type="reset">CLEAR</button>
+                <button class="submit" type="submit">SUBMIT</button>
               </div>
             </div>
           </div>
