--- a/task-5/form.html
+++ b/task-5/form.html
@@ -170,15 +170,15 @@
                     <textarea
                       type="text"
                       placeholder="Enter your full address"
-                      cols="60"
+                      cols="50"
                       rows="10"
                     ></textarea>
                   </div>
                 </div>
-              </form>
               <div class="button">
-                <button class="clear" type="reset">CLEAR</button>
+                 <button class="reset" type="reset">RESET</button>
                 <button class="submit" type="submit">SUBMIT</button>
+                </form>
               </div>
             </div>
           </div>
