--- a/task-5/form.html
+++ b/task-5/form.html
@@ -43,16 +43,16 @@
                     id="first name"
                   />
                 </div>
-                <div class="student-1 mobile">
-                  <label for="mobile number"
-                    >Mobile <span class="red-text">*</span> :</label
+                <div class="student-1 lastname">
+                  <label for="lastname"
+                    >Last Name<span class="red-text">*</span> :</label
                   >
                 </div>
-                <div class="student-1 mobilearea">
+                <div class="student-1 lastnamearea">
                   <input
-                    type="tel"
-                    placeholder="Enter your mobile number"
-                    id="mobile number"
+                    type="text"
+                    placeholder="Enter your last name"
+                    id="lastname"
                   />
                 </div>
                 <div class="student-1 branch">
@@ -78,16 +78,16 @@
                 </div>
             </div>
             <div class="second-formside">
-                <div class="student-2 lastname">
-                  <label for="lastname"
-                    >Last Name <span class="red-text">*</span> :</label
+                <div class="student-2 mobile">
+                  <label for="mobile"
+                    >Mobile <span class="red-text">*</span> :</label
                   >
                 </div>
-                <div class="student-2 lastnamearea">
+                <div class="student-2 mobilearea">
                   <input
                     type="text"
-                    placeholder="Enter your last name"
-                    id="lastname"
+                    placeholder="Enter your mobile number"
+                    id="mobile"
                   />
                 </div>
                 <div class="student-2 email">
