--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="box">
           <a href="task-5/index.html">TASK 5</a>
         </div>
+        <div class="box">
+          <a href="task-7/index.html">TASK 5</a>
+        </div>
       </div>
     </div>
   </body>
